--- a/info.html
+++ b/info.html
@@ -1,3 +1,5 @@
 <h1>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, in exercitationem saepe iusto dolore officiis tempora est atque quaerat rem voluptate a repellendus culpa. Sequi possimus minima ab sed saepe!
 </h1>
+
+<img src="" alt="">
